# telos

./: .gitignore  CHANGELOG.md  Examples.hs  LICENSE  Logic.hs  telos.cabal
bench/: BenchPerm.hs
src/: Logic.hs
