cabal-version:       >=1.10
name:                telos
version:             0.0.1
synopsis:            Implementation of Logic Programming in based on extensible types
homepage:            https://github.com/NASA-SW-VnV/telos
license:             AllRightsReserved
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perezdominguez@nasa.gov
copyright:           NASA
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Logic
  build-depends:
      base           >= 4.12 && < 4.13
    , mtl
    , pretty-simple
    , QuickCheck
  hs-source-dirs:   src
  default-language: Haskell2010
